# meta-bot

./: .gitignore  .pre-commit-config.yaml  404.html  DOCS.md  Dockerfile  README.md  index.html  mkdocs.yml  pre_commit_output.txt  pyproject.toml  sitemap.xml
.github/: dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/install-from-artifact/: action.yml
.github/workflows/: ci.yaml  ci.yml  docker.yml  label-sync.yml  label.yml  labeler.yml  lint.yml  pre-commit.yml  release.yml  test.yml
DOCS/: index.html
architecture/: index.html
configuration/: index.html
contributing/: index.html
deployment/: index.html
docs/: DOCS.md  architecture.md  configuration.md  contributing.md  deployment.md  index.md
meta_app_chatbot/: main.py
meta_app_chatbot/agent/: create_graph_agent.py  main_agent.py  main_prompts.py  model_factory.py  utils.py
meta_app_chatbot/agent/sub_agents/: __init__.py  agent_tool_base.py  sub_agents_registry.py  tool_prompts.py
meta_app_chatbot/agent/supports/: __init__.py  audio_controller.py  message_controller.py
meta_app_chatbot/agent/tools/: __init__.py  payment_tool.py  scraping.py  tool_prompts.py
meta_app_chatbot/cache/: __init__.py  cache.py
meta_app_chatbot/config/: few_shots.py  settings.py
meta_app_chatbot/db/: __init__.py
meta_app_chatbot/db/firestore/: __init__.py  db_controller.py
meta_app_chatbot/db/rag/: __init__.py  big_query_rag.py
meta_app_chatbot/prompts/: response_summarize_human.md  system_message_facts.md  system_prompt_odoo.md  user_prompt_dynamic.md
meta_app_chatbot/routers/: media.py  messages.py  schemas.py  webhook.py
meta_app_chatbot/utils/: __init__.py  email_sending.py  logger.py
meta_app_chatbot/voice/: __init__.py  utils.py  voice.py
meta_bot/: main.py
meta_bot/agent/: create_graph_agent.py  main_agent.py  model_factory.py
meta_bot/agent/sub_agents/: __init__.py  agent_tool_base.py  sub_agents_registry.py
meta_bot/agent/supports/: audio_controller.py  message_controller.py
meta_bot/agent/tools/: payment_tool.py  scraping.py  tool_prompts.py
meta_bot/cache/: cache.py
meta_bot/config/: embedding_schema.json  few_shots_rag_schema.json  rag_schema.json  settings.py  settings.toml
meta_bot/db/firestore/: __init__.py  db_controller.py
meta_bot/prompts/: history_human_message.md  history_system_message.md  human_divide_audio.md  human_divide_message.md  human_message.md  human_message_facts.md  response_summarize_system.md  system_divide_audio.md  system_divide_message.md  system_message.md  system_prompt_dynamic.md  user_prompt_odoo.md
meta_bot/routers/: media.py  messages.py  schemas.py  webhook.py
meta_bot/utils/: logger.py
meta_bot/voice/: __init__.py  utils.py  voice.py
search/: search_index.json
(+18 files in other folders)
