[project]
authors = [{ name = "Mohaemd Emam", email = "emam200232@gmail.com" }]
name = "meta-bot"
version = "0.1.0"
description = "Meta App Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.11.9",
    "apscheduler==3.11.0",
    "beautifulsoup4==4.12.3",
    "db-dtypes==1.4.3",
    "diskcache==5.6.3",
    "fastapi==0.115.12",
    "ffmpeg-python==0.2.0",
    "firestore==0.0.8",
    "google-api-core==2.23.0",
    "google-api-python-client==2.176.0",
    "google-auth==2.36.0",
    "google-cloud-aiplatform==1.71.1",
    "google-cloud-bigquery-storage==2.32.0",
    "google-cloud-core==2.4.1",
    "google-cloud-firestore==2.20.2",
    "google-cloud-speech==2.33.0",
    "google-cloud-texttospeech==2.27.0",
    "google-genai==1.24.0",
    "grpc-google-iam-v1==0.13.1",
    "gunicorn==23.0.0",
    "inflect==7.5.0",
    "langchain==0.3.7",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.5",
    "langchain-core>=0.3.45,<0.4.0",
    "langchain-google-genai==2.0.10",
    "langchain-openai==0.3.9",
    "langgraph==0.2.50",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "oauth2client<4.0.0",
    "openai==1.66.3",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "playwright==1.51.0",
    "pre-commit>=4.6.0",
    "pyarrow==18.1.0",
    "pycountry==24.6.1",
    "pydantic==2.10.4",
    "pydub==0.25.1",
    "pygame==2.6.1",
    "pygments==2.18.0",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "sounddevice==0.5.2",
    "soundfile==0.13.1",
    "sqlparse==0.5.3",
    "tiktoken==0.8.0",
    "tqdm==4.66.5",
    "urllib3==2.2.2",
    "uvicorn[standard]==0.33.0",
    "vertexai==1.71.1",
    "hypercorn==0.17.3",
    "dynaconf>=3.2.13",
    "dynaprompt>=0.3.7",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
]


[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["ASYNC", "E", "F", "FAST", "I", "PLE"]
ignore = [
    "ASYNC109",
    "E101",
    "E402",
    "E501",
    "F841",
    "E731",
    "W291",
] # TODO: determine if adding timeouts to all the unbounded async functions is needed / worth-it so we can un-ignore ASYNC109
unfixable = ["E101", "E402", "E501", "F841", "E731"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 140
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
